monitoring/prometheus/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - prometheus.thuault.com
    secretName: prometheus-tls
  rules:
  - host: prometheus.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
